# architecture-pro-quantum-forge

./: README.md  pyproject.toml
task_1_research/: README.md
task_2_sample_dataset/: README.md  convert_html_to_text.py  fuss.py  html_to_text_converter.py  nemezida.txt  original_dataset.md  replace_terms.py
task_2_sample_dataset/arcanum_articles/: terms_map.yaml
task_2_sample_dataset/arcanum_articles/raw_html/: Б'елан Т'Сераа _ Arcanum вики _ Fandom.html  (+48 more)
task_3_vector_index/: README.md  create_index.py  doc_embeddings_chunked-0.6B.pck  doc_embeddings_chunked-4B-8bit.pck  doc_embeddings_chunked-4B.pck  embeddings-0.6B.pck  embeddings-4B.pck  extract_embeddings_for_kb.py  not_found_questions.yaml  pydantic_dto.py  questions.yaml  questions_embeddings-0.6B.pck  questions_embeddings-4B.pck  whatsup_with_vector_index.py
task_4_rag/: README.md  prompt_template.txt  prompt_template_ginecarum.txt  rag_example.py  rag_fuss.py  retrieval_fuss.py
task_4_rag/ginecarum_prompt/: example1_assistant.txt  example1_user.txt  example2_assistant.txt  example2_user.txt  query_user.txt  system.txt
task_4_rag/telegram_bot/: main.py  setup_telegram_bot.py
task_5_telegram_bot/: README.md
task_5_telegram_bot/ChatExport_2025-10-12/: messages.html
task_5_telegram_bot/telegram_bot/: .env  main.py  setup_telegram_bot.py
task_6_scheduled_updating/: README.md  architecture_diagram.puml  cleanup_indexes.py  file_hashing.py  metadata.db  sqla_models.py  update_chroma_db.py
task_6_scheduled_updating/dags/: dag.py
task_7_evaluation/: INTEGRATION_SUMMARY.md  QUICK_TEST.md  README.md  README_RUSSIAN_PROMPTS.md  debug_dataset.json  debug_ragas_results_ollama.json  enriched_gold_questions.yaml  enriched_gold_questions_with_unfiltered_context.yaml  enriched_gold_questions_with_unfiltered_context_1_2.yaml  enriched_gold_questions_with_unfiltered_context_en.yaml  evaluate_rag_responses.py  generate_rag_responses.py  gold_questions.yaml  ragas_results_ollama_en.json  ragas_results_ollama_ru.json  russian_prompts.py
(+102 files in other folders)
