[project]
name = "architecture-pro-quantum-forge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "aiogram>=3.22.0",
    "apache-airflow>=3.1.0",
    "beautifulsoup4>=4.14.0",
    "bitsandbytes>=0.43.0",
    "chromadb>=1.1.1",
    "contexttimer>=0.3.3",
    "faiss-cpu>=1.12.0",
    "faiss-gpu>=1.7.2",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "more-itertools>=10.8.0",
    "ollama>=0.6.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "ragas>=0.3.6",
    "sentence-transformers>=5.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "torch<=2.7.1",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
